--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,6 +1,6 @@
-HELP.md
+../HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+!backend/.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
